[gd_scene load_steps=31 format=2]

[ext_resource path="res://Player/Lantern.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/StreetLamp1.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/StreetLamp2.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/House.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Fence.tscn" type="PackedScene" id=7]
[ext_resource path="res://WorldController.gd" type="Script" id=8]
[ext_resource path="res://World/SmallVase.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Smallvasewithplant.tscn" type="PackedScene" id=10]
[ext_resource path="res://World/Vase.tscn" type="PackedScene" id=11]
[ext_resource path="res://World/Vasewithplant.tscn" type="PackedScene" id=12]
[ext_resource path="res://World/LightTest.tscn" type="PackedScene" id=13]
[ext_resource path="res://Background/Nearest.png" type="Texture" id=14]
[ext_resource path="res://Background/Middlet.png" type="Texture" id=15]
[ext_resource path="res://Background/Background.png" type="Texture" id=16]
[ext_resource path="res://UI/Bungee-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://UI/HPbar.png" type="Texture" id=18]
[ext_resource path="res://UI/HPbarprocess.png" type="Texture" id=19]
[ext_resource path="res://TextureProgress.gd" type="Script" id=20]
[ext_resource path="res://Effect/ParticlesMainScreen.tscn" type="PackedScene" id=21]
[ext_resource path="res://World/MainCamera.tscn" type="PackedScene" id=22]
[ext_resource path="res://UI/PeakContainer.tscn" type="PackedScene" id=23]
[ext_resource path="res://UI/PixelFont.tres" type="DynamicFont" id=24]
[ext_resource path="res://Candy/CZombie.tscn" type="PackedScene" id=25]
[ext_resource path="res://Candy/Cvampire.tscn" type="PackedScene" id=26]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 10 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 17 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.5, 20 )

[node name="World" type="Node"]
script = ExtResource( 8 )

[node name="MainCamera" parent="." instance=ExtResource( 22 )]
limit_right = 1600

[node name="TileMap" parent="." instance=ExtResource( 2 )]
z_index = 2
occluder_light_mask = 0
tile_data = PoolIntArray( -1, 0, 0, -65436, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 458792, 0, 0, 458793, 0, 0, 458794, 0, 0, 458795, 0, 0, 458796, 0, 0, 458797, 0, 0, 458798, 0, 0, 458799, 0, 0, 458800, 0, 0, 458801, 0, 0, 458802, 0, 0, 458803, 0, 0, 458804, 0, 0, 458805, 0, 0, 458806, 0, 0, 458807, 0, 0, 458808, 0, 0, 458809, 0, 0, 458810, 0, 0, 458811, 0, 0, 458812, 0, 0, 458813, 0, 0, 458814, 0, 0, 458815, 0, 0, 458816, 0, 0, 458817, 0, 0, 458818, 0, 0, 458819, 0, 0, 458820, 0, 0, 458821, 0, 0, 458822, 0, 0, 458823, 0, 0, 458824, 0, 0, 458825, 0, 0, 458826, 0, 0, 458827, 0, 0, 458828, 0, 0, 458829, 0, 0, 458830, 0, 0, 458831, 0, 0, 458832, 0, 0, 458833, 0, 0, 458834, 0, 0, 458835, 0, 0, 458836, 0, 0, 458837, 0, 0, 458838, 0, 0, 458839, 0, 0, 458840, 0, 0, 458841, 0, 0, 458842, 0, 0, 458843, 0, 0, 458844, 0, 0, 458845, 0, 0, 458846, 0, 0, 458847, 0, 0, 458848, 0, 0, 458849, 0, 0, 458850, 0, 0, 458851, 0, 0, 458852, 0, 0, 458853, 0, 0, 458854, 0, 0, 458855, 0, 0, 458856, 0, 0, 458857, 0, 0, 458858, 0, 0, 458859, 0, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 1, 0, 524329, 1, 0, 524330, 1, 0, 524331, 1, 0, 524332, 1, 0, 524333, 1, 0, 524334, 1, 0, 524335, 1, 0, 524336, 1, 0, 524337, 1, 0, 524338, 1, 0, 524339, 1, 0, 524340, 1, 0, 524341, 1, 0, 524342, 1, 0, 524343, 1, 0, 524344, 1, 0, 524345, 1, 0, 524346, 1, 0, 524347, 1, 0, 524348, 1, 0, 524349, 1, 0, 524350, 1, 0, 524351, 1, 0, 524352, 1, 0, 524353, 1, 0, 524354, 1, 0, 524355, 1, 0, 524356, 1, 0, 524357, 1, 0, 524358, 1, 0, 524359, 1, 0, 524360, 1, 0, 524361, 1, 0, 524362, 1, 0, 524363, 1, 0, 524364, 1, 0, 524365, 1, 0, 524366, 1, 0, 524367, 1, 0, 524368, 1, 0, 524369, 1, 0, 524370, 1, 0, 524371, 1, 0, 524372, 1, 0, 524373, 1, 0, 524374, 1, 0, 524375, 1, 0, 524376, 1, 0, 524377, 1, 0, 524378, 1, 0, 524379, 1, 0, 524380, 1, 0, 524381, 1, 0, 524382, 1, 0, 524383, 1, 0, 524384, 1, 0, 524385, 1, 0, 524386, 1, 0, 524387, 1, 0, 524388, 1, 0, 524389, 1, 0, 524390, 1, 0, 524391, 1, 0, 524392, 1, 0, 524393, 1, 0, 524394, 1, 0, 524395, 1, 0, 655356, 2, 0, 655357, 2, 0, 655358, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589851, 2, 0, 589852, 2, 0, 589853, 2, 0, 589854, 2, 0, 589855, 2, 0, 589856, 2, 0, 589857, 2, 0, 589858, 2, 0, 589859, 2, 0, 589860, 2, 0, 589861, 2, 0, 589862, 2, 0, 589863, 2, 0, 589864, 2, 0, 589865, 2, 0, 589866, 2, 0, 589867, 2, 0, 589868, 2, 0, 589869, 2, 0, 589870, 2, 0, 589871, 2, 0, 589872, 2, 0, 589873, 2, 0, 589874, 2, 0, 589875, 2, 0, 589876, 2, 0, 589877, 2, 0, 589878, 2, 0, 589879, 2, 0, 589880, 2, 0, 589881, 2, 0, 589882, 2, 0, 589883, 2, 0, 589884, 2, 0, 589885, 2, 0, 589886, 2, 0, 589887, 2, 0, 589888, 2, 0, 589889, 2, 0, 589890, 2, 0, 589891, 2, 0, 589892, 2, 0, 589893, 2, 0, 589894, 2, 0, 589895, 2, 0, 589896, 2, 0, 589897, 2, 0, 589898, 2, 0, 589899, 2, 0, 589900, 2, 0, 589901, 2, 0, 589902, 2, 0, 589903, 2, 0, 589904, 2, 0, 589905, 2, 0, 589906, 2, 0, 589907, 2, 0, 589908, 2, 0, 589909, 2, 0, 589910, 2, 0, 589911, 2, 0, 589912, 2, 0, 589913, 2, 0, 589914, 2, 0, 589915, 2, 0, 589916, 2, 0, 589917, 2, 0, 589918, 2, 0, 589919, 2, 0, 589920, 2, 0, 589921, 2, 0, 589922, 2, 0, 589923, 2, 0, 589924, 2, 0, 589925, 2, 0, 589926, 2, 0, 589927, 2, 0, 589928, 2, 0, 589929, 2, 0, 589930, 2, 0, 589931, 2, 0, 720892, 2, 0, 720893, 2, 0, 720894, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 2, 0, 655386, 2, 0, 655387, 2, 0, 655388, 2, 0, 655389, 2, 0, 655390, 2, 0, 655391, 2, 0, 655392, 2, 0, 655393, 2, 0, 655394, 2, 0, 655395, 2, 0, 655396, 2, 0, 655397, 2, 0, 655398, 2, 0, 655399, 2, 0, 655400, 2, 0, 655401, 2, 0, 655402, 2, 0, 655403, 2, 0, 655404, 2, 0, 655405, 2, 0, 655406, 2, 0, 655407, 2, 0, 655408, 2, 0, 655409, 2, 0, 655410, 2, 0, 655411, 2, 0, 655412, 2, 0, 655413, 2, 0, 655414, 2, 0, 655415, 2, 0, 655416, 2, 0, 655417, 2, 0, 655418, 2, 0, 655419, 2, 0, 655420, 2, 0, 655421, 2, 0, 655422, 2, 0, 655423, 2, 0, 655424, 2, 0, 655425, 2, 0, 655426, 2, 0, 655427, 2, 0, 655428, 2, 0, 655429, 2, 0, 655430, 2, 0, 655431, 2, 0, 655432, 2, 0, 655433, 2, 0, 655434, 2, 0, 655435, 2, 0, 655436, 2, 0, 655437, 2, 0, 655438, 2, 0, 655439, 2, 0, 655440, 2, 0, 655441, 2, 0, 655442, 2, 0, 655443, 2, 0, 655444, 2, 0, 655445, 2, 0, 655446, 2, 0, 655447, 2, 0, 655448, 2, 0, 655449, 2, 0, 655450, 2, 0, 655451, 2, 0, 655452, 2, 0, 655453, 2, 0, 655454, 2, 0, 655455, 2, 0, 655456, 2, 0, 655457, 2, 0, 655458, 2, 0, 655459, 2, 0, 655460, 2, 0, 655461, 2, 0, 655462, 2, 0, 655463, 2, 0, 655464, 2, 0, 655465, 2, 0, 655466, 2, 0, 655467, 2, 0, 786428, 2, 0, 786429, 2, 0, 786430, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 720916, 2, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 2, 0, 720925, 2, 0, 720926, 2, 0, 720927, 2, 0, 720928, 2, 0, 720929, 2, 0, 720930, 2, 0, 720931, 2, 0, 720932, 2, 0, 720933, 2, 0, 720934, 2, 0, 720935, 2, 0, 720936, 2, 0, 720937, 2, 0, 720938, 2, 0, 720939, 2, 0, 720940, 2, 0, 720941, 2, 0, 720942, 2, 0, 720943, 2, 0, 720944, 2, 0, 720945, 2, 0, 720946, 2, 0, 720947, 2, 0, 720948, 2, 0, 720949, 2, 0, 720950, 2, 0, 720951, 2, 0, 720952, 2, 0, 720953, 2, 0, 720954, 2, 0, 720955, 2, 0, 720956, 2, 0, 720957, 2, 0, 720958, 2, 0, 720959, 2, 0, 720960, 2, 0, 720961, 2, 0, 720962, 2, 0, 720963, 2, 0, 720964, 2, 0, 720965, 2, 0, 720966, 2, 0, 720967, 2, 0, 720968, 2, 0, 720969, 2, 0, 720970, 2, 0, 720971, 2, 0, 720972, 2, 0, 720973, 2, 0, 720974, 2, 0, 720975, 2, 0, 720976, 2, 0, 720977, 2, 0, 720978, 2, 0, 720979, 2, 0, 720980, 2, 0, 720981, 2, 0, 720982, 2, 0, 720983, 2, 0, 720984, 2, 0, 720985, 2, 0, 720986, 2, 0, 720987, 2, 0, 720988, 2, 0, 720989, 2, 0, 720990, 2, 0, 720991, 2, 0, 720992, 2, 0, 720993, 2, 0, 720994, 2, 0, 720995, 2, 0, 720996, 2, 0, 720997, 2, 0, 720998, 2, 0, 720999, 2, 0, 721000, 2, 0, 721001, 2, 0, 721002, 2, 0, 721003, 2, 0, 851964, 2, 0, 851965, 2, 0, 851966, 2, 0, 851967, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 0, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 786464, 2, 0, 786465, 2, 0, 786466, 2, 0, 786467, 2, 0, 786468, 2, 0, 786469, 2, 0, 786470, 2, 0, 786471, 2, 0, 786472, 2, 0, 786473, 2, 0, 786474, 2, 0, 786475, 2, 0, 786476, 2, 0, 786477, 2, 0, 786478, 2, 0, 786479, 2, 0, 786480, 2, 0, 786481, 2, 0, 786482, 2, 0, 786483, 2, 0, 786484, 2, 0, 786485, 2, 0, 786486, 2, 0, 786487, 2, 0, 786488, 2, 0, 786489, 2, 0, 786490, 2, 0, 786491, 2, 0, 786492, 2, 0, 786493, 2, 0, 786494, 2, 0, 786495, 2, 0, 786496, 2, 0, 786497, 2, 0, 786498, 2, 0, 786499, 2, 0, 786500, 2, 0, 786501, 2, 0, 786502, 2, 0, 786503, 2, 0, 786504, 2, 0, 786505, 2, 0, 786506, 2, 0, 786507, 2, 0, 786508, 2, 0, 786509, 2, 0, 786510, 2, 0, 786511, 2, 0, 786512, 2, 0, 786513, 2, 0, 786514, 2, 0, 786515, 2, 0, 786516, 2, 0, 786517, 2, 0, 786518, 2, 0, 786519, 2, 0, 786520, 2, 0, 786521, 2, 0, 786522, 2, 0, 786523, 2, 0, 786524, 2, 0, 786525, 2, 0, 786526, 2, 0, 786527, 2, 0, 786528, 2, 0, 786529, 2, 0, 786530, 2, 0, 786531, 2, 0, 786532, 2, 0, 786533, 2, 0, 786534, 2, 0, 786535, 2, 0, 786536, 2, 0, 786537, 2, 0, 786538, 2, 0, 786539, 2, 0, 917500, 2, 0, 917501, 2, 0, 917502, 2, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852002, 2, 0, 852003, 2, 0, 852004, 2, 0, 852005, 2, 0, 852006, 2, 0, 852007, 2, 0, 852008, 2, 0, 852009, 2, 0, 852010, 2, 0, 852011, 2, 0, 852012, 2, 0, 852013, 2, 0, 852014, 2, 0, 852015, 2, 0, 852016, 2, 0, 852017, 2, 0, 852018, 2, 0, 852019, 2, 0, 852020, 2, 0, 852021, 2, 0, 852022, 2, 0, 852023, 2, 0, 852024, 2, 0, 852025, 2, 0, 852026, 2, 0, 852027, 2, 0, 852028, 2, 0, 852029, 2, 0, 852030, 2, 0, 852031, 2, 0, 852032, 2, 0, 852033, 2, 0, 852034, 2, 0, 852035, 2, 0, 852036, 2, 0, 852037, 2, 0, 852038, 2, 0, 852039, 2, 0, 852040, 2, 0, 852041, 2, 0, 852042, 2, 0, 852043, 2, 0, 852044, 2, 0, 852045, 2, 0, 852046, 2, 0, 852047, 2, 0, 852048, 2, 0, 852049, 2, 0, 852050, 2, 0, 852051, 2, 0, 852052, 2, 0, 852053, 2, 0, 852054, 2, 0, 852055, 2, 0, 852056, 2, 0, 852057, 2, 0, 852058, 2, 0, 852059, 2, 0, 852060, 2, 0, 852061, 2, 0, 852062, 2, 0, 852063, 2, 0, 852064, 2, 0, 852065, 2, 0, 852066, 2, 0, 852067, 2, 0, 852068, 2, 0, 852069, 2, 0, 852070, 2, 0, 852071, 2, 0, 852072, 2, 0, 852073, 2, 0, 852074, 2, 0, 852075, 2, 0, 983036, 2, 0, 983037, 2, 0, 983038, 2, 0, 983039, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 917529, 2, 0, 917530, 2, 0, 917531, 2, 0, 917532, 2, 0, 917533, 2, 0, 917534, 2, 0, 917535, 2, 0, 917536, 2, 0, 917537, 2, 0, 917538, 2, 0, 917539, 2, 0, 917540, 2, 0, 917541, 2, 0, 917542, 2, 0, 917543, 2, 0, 917544, 2, 0, 917545, 2, 0, 917546, 2, 0, 917547, 2, 0, 917548, 2, 0, 917549, 2, 0, 917550, 2, 0, 917551, 2, 0, 917552, 2, 0, 917553, 2, 0, 917554, 2, 0, 917555, 2, 0, 917556, 2, 0, 917557, 2, 0, 917558, 2, 0, 917559, 2, 0, 917560, 2, 0, 917561, 2, 0, 917562, 2, 0, 917563, 2, 0, 917564, 2, 0, 917565, 2, 0, 917566, 2, 0, 917567, 2, 0, 917568, 2, 0, 917569, 2, 0, 917570, 2, 0, 917571, 2, 0, 917572, 2, 0, 917573, 2, 0, 917574, 2, 0, 917575, 2, 0, 917576, 2, 0, 917577, 2, 0, 917578, 2, 0, 917579, 2, 0, 917580, 2, 0, 917581, 2, 0, 917582, 2, 0, 917583, 2, 0, 917584, 2, 0, 917585, 2, 0, 917586, 2, 0, 917587, 2, 0, 917588, 2, 0, 917589, 2, 0, 917590, 2, 0, 917591, 2, 0, 917592, 2, 0, 917593, 2, 0, 917594, 2, 0, 917595, 2, 0, 917596, 2, 0, 917597, 2, 0, 917598, 2, 0, 917599, 2, 0, 917600, 2, 0, 917601, 2, 0, 917602, 2, 0, 917603, 2, 0, 917604, 2, 0, 917605, 2, 0, 917606, 2, 0, 917607, 2, 0, 917608, 2, 0, 917609, 2, 0, 917610, 2, 0, 917611, 2, 0 )

[node name="Nothing" type="Node" parent="."]

[node name="Light2D" parent="Nothing" instance=ExtResource( 13 )]
visible = false
position = Vector2( 600, 72 )
texture_scale = 2.46
color = Color( 1, 0.984314, 0, 1 )
energy = 1.86

[node name="StreetLamp1" parent="Nothing" instance=ExtResource( 3 )]
position = Vector2( 930, 88 )

[node name="StreetLamp5" parent="Nothing" instance=ExtResource( 3 )]
position = Vector2( 1218, 88 )

[node name="StreetLamp6" parent="Nothing" instance=ExtResource( 3 )]
position = Vector2( 386, 88 )

[node name="StreetLamp7" parent="Nothing" instance=ExtResource( 3 )]
position = Vector2( 66, 88 )

[node name="StreetLamp8" parent="Nothing" instance=ExtResource( 3 )]
position = Vector2( 1538, 88 )

[node name="StreetLamp4" parent="Nothing" instance=ExtResource( 3 )]
position = Vector2( 682, 88 )

[node name="StreetLamp2" parent="Nothing" instance=ExtResource( 4 )]
position = Vector2( 744, 80 )

[node name="StreetLamp3" parent="Nothing" instance=ExtResource( 4 )]
position = Vector2( 865, 80 )
scale = Vector2( -1, 1 )

[node name="House" parent="Nothing" instance=ExtResource( 5 )]
position = Vector2( 805, 72 )

[node name="Label" parent="Nothing/House" index="6"]
visible = true
margin_left = 30.0
margin_top = -15.0
margin_right = 146.0
margin_bottom = 12.0

[node name="Door" parent="Nothing/House" instance=ExtResource( 6 )]
position = Vector2( -5, 32 )

[node name="Fence" parent="Nothing" instance=ExtResource( 7 )]
tile_data = PoolIntArray( 721015, 0, 0, 721016, 0, 1, 721017, 0, 1, 721018, 0, 1, 721019, 0, 1, 721020, 0, 1, 721021, 0, 1, 721022, 0, 1, 721023, 0, 1, 721024, 0, 2, 721036, 0, 0, 721037, 0, 1, 721038, 0, 1, 721039, 0, 1, 721040, 0, 1, 721041, 0, 1, 721042, 0, 1, 721043, 0, 1, 721044, 0, 1, 721045, 0, 1, 721046, 0, 1, 721047, 0, 2 )

[node name="SmallVase" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 704, 112 )

[node name="SmallVase4" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 1286, 112 )

[node name="SmallVase5" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 1297, 112 )

[node name="SmallVase6" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 1515, 112 )

[node name="SmallVase7" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 1515, 106 )

[node name="SmallVase8" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 1515, 100 )

[node name="SmallVase9" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 1491, 112 )

[node name="SmallVase2" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 505, 112 )

[node name="SmallVase3" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 516, 112 )

[node name="Smallvasewithplant" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 691, 112 )

[node name="Smallvasewithplant2" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 1261, 112 )

[node name="SmallVase10" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 1066, 112 )

[node name="SmallVase11" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 1077, 112 )

[node name="Smallvasewithplant5" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 1052, 112 )

[node name="Smallvasewithplant7" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 117, 100 )

[node name="Smallvasewithplant8" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 375, 112 )

[node name="Smallvasewithplant9" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 361, 112 )

[node name="Smallvasewithplant6" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 1069, 106 )

[node name="Smallvasewithplant3" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 1501, 112 )

[node name="Smallvasewithplant4" parent="Nothing" instance=ExtResource( 10 )]
position = Vector2( 1525, 112 )

[node name="Vase" parent="Nothing" instance=ExtResource( 11 )]
position = Vector2( 752, 112 )

[node name="Vasewithplant" parent="Nothing" instance=ExtResource( 12 )]
position = Vector2( 908, 96 )

[node name="Vasewithplant2" parent="Nothing" instance=ExtResource( 12 )]
position = Vector2( 491, 96 )

[node name="SmallVase12" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 107, 112 )

[node name="SmallVase14" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 112, 106 )

[node name="SmallVase17" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 55, 112 )

[node name="SmallVase15" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 125, 106 )

[node name="SmallVase16" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 129, 112 )

[node name="SmallVase13" parent="Nothing" instance=ExtResource( 9 )]
position = Vector2( 118, 112 )

[node name="Vasewithplant4" parent="Nothing" instance=ExtResource( 12 )]
position = Vector2( 93, 96 )

[node name="Vasewithplant3" parent="Nothing" instance=ExtResource( 12 )]
position = Vector2( 1247, 96 )

[node name="Delete" type="Area2D" parent="Nothing"]
position = Vector2( -65, 108 )
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nothing/Delete"]
shape = SubResource( 1 )

[node name="Delete2" type="Area2D" parent="Nothing"]
position = Vector2( 1728, 110 )
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nothing/Delete2"]
shape = SubResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -128

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -9
motion_scale = Vector2( 0.2, 1 )
motion_offset = Vector2( 0, -20 )
motion_mirroring = Vector2( 320, 180 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background"]
position = Vector2( 0, -24 )
z_index = -1
texture = ExtResource( 16 )
centered = false

[node name="Middle" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -9
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Middle"]
position = Vector2( 0, -24 )
z_index = -1
texture = ExtResource( 15 )
centered = false

[node name="Nearest" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -9
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Nearest"]
position = Vector2( 0, -24 )
texture = ExtResource( 14 )
centered = false

[node name="Particle3" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 9
z_as_relative = false
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="Particles2D" parent="ParallaxBackground/Particle3" instance=ExtResource( 21 )]

[node name="ParallaxForground" type="ParallaxBackground" parent="."]
layer = 1

[node name="Particle2" type="ParallaxLayer" parent="ParallaxForground"]
z_index = 9
z_as_relative = false
motion_scale = Vector2( 1.5, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="Particles2D" parent="ParallaxForground/Particle2" instance=ExtResource( 21 )]

[node name="Lantern" parent="." instance=ExtResource( 1 )]
position = Vector2( 801, 120 )

[node name="SpawnLeft" type="Position2D" parent="."]
position = Vector2( -32, 120 )

[node name="SpawnRight" type="Position2D" parent="."]
position = Vector2( 1664, 120 )

[node name="BreathTime" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="SpawnCooldown" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -13, 56 )
rotation = 1.5708
shape = SubResource( 2 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1613, 56 )
rotation = -1.5708
shape = SubResource( 2 )
one_way_collision = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Message" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -320.0
margin_top = 8.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "Game create by Muc
For Ninja game jam #5
--------"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -27.0
margin_right = 72.0
margin_bottom = 13.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 18 )
texture_progress = ExtResource( 19 )
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeakContainer" parent="CanvasLayer/Control/CenterContainer" instance=ExtResource( 23 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 158.0
margin_top = 74.0
margin_right = 162.0
margin_bottom = 85.0

[node name="WarningLeft" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -39.0
margin_right = 26.0
margin_bottom = -25.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 1, 0.14902, 0.14902, 1 )
text = "!!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningRight" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -39.0
margin_right = -6.0
margin_bottom = -25.0
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 1, 0.14902, 0.14902, 1 )
text = "!!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostBugHelper" type="Area2D" parent="."]
position = Vector2( -1, 100 )
collision_layer = 515
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostBugHelper"]
shape = SubResource( 4 )

[node name="GhostBugHelper2" type="Area2D" parent="."]
position = Vector2( 1601, 100 )
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostBugHelper2"]
shape = SubResource( 4 )

[node name="FirstStart" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Guide1" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Guide2" type="Timer" parent="."]
wait_time = 9.0
one_shot = true
autostart = true

[node name="Guide3" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="LeftHint" type="Position2D" parent="."]
position = Vector2( 680, 64 )

[node name="RightHint" type="Position2D" parent="."]
position = Vector2( 928, 64 )

[node name="Candy" parent="." instance=ExtResource( 26 )]
position = Vector2( 780, 121 )

[node name="Candy2" parent="." instance=ExtResource( 26 )]
position = Vector2( 763, 121 )

[node name="Candy3" parent="." instance=ExtResource( 26 )]
position = Vector2( 746, 121 )

[node name="Candy4" parent="." instance=ExtResource( 26 )]
position = Vector2( 729, 121 )

[node name="Candy5" parent="." instance=ExtResource( 26 )]
position = Vector2( 714, 121 )

[node name="Candy6" parent="." instance=ExtResource( 26 )]
position = Vector2( 699, 120 )

[node name="Candy7" parent="." instance=ExtResource( 26 )]
position = Vector2( 683, 120 )

[node name="Candy8" parent="." instance=ExtResource( 25 )]
position = Vector2( 674.189, 119.883 )

[connection signal="timeout" from="BreathTime" to="." method="_on_BreathTime_timeout"]
[connection signal="timeout" from="SpawnCooldown" to="." method="_on_SpawnCooldown_timeout"]
[connection signal="timeout" from="FirstStart" to="." method="_on_FirstStart_timeout"]
[connection signal="timeout" from="Guide1" to="." method="_on_Guide1_timeout"]
[connection signal="timeout" from="Guide2" to="." method="_on_Guide2_timeout"]
[connection signal="timeout" from="Guide3" to="." method="_on_Guide3_timeout"]

[editable path="Nothing/House"]
[editable path="Lantern"]
[editable path="Lantern/Sprite/HitBox"]
[editable path="Lantern/HurtBox"]
